force-app/main/default/objects/Intake__c/fields/Intake_Date__c.field-meta.xml
<CustomField>
    <fullName>Intake_Date__c</fullName>
    <label>Intake Date</label>
    <type>DateTime</type>
</CustomField>