force-app/main/default/objects/Intake__c/fields/Intake_Duration__c.field-meta.xml
<CustomField>
    <fullName>Intake_Duration__c</fullName>
    <label>Intake Duration (Min)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>