force-app/main/default/objects/Intake__c/fields/Intake_Method__c.field-meta.xml
<CustomField>
    <fullName>Intake_Method__c</fullName>
    <label>Intake Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inbound Phone</fullName>
            </value>
            <value>
                <fullName>Outbound Phone</fullName>
            </value>
            <value>
                <fullName>Chatbot</fullName>
            </value>
            <value>
                <fullName>Web Form</fullName>
            </value>
            <value>
                <fullName>In-Person</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>