force-app/main/default/objects/Intake__c/fields/Intake_Notes__c.field-meta.xml
<CustomField>
    <fullName>Intake_Notes__c</fullName>
    <label>Intake Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>