force-app/main/default/objects/Intake__c/fields/Intake_Phone__c.field-meta.xml
<CustomField>
    <fullName>Intake_Phone__c</fullName>
    <label>Intake Phone</label>
    <type>Phone</type>
</CustomField>