force-app/main/default/objects/Intake__c/fields/Intake_Rep__c.field-meta.xml
<CustomField>
    <fullName>Intake_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intake Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Intakes</relationshipName>
    <type>Lookup</type>
</CustomField>