force-app/main/default/objects/Intake__c/fields/Intake_Title__c.field-meta.xml
<CustomField>
    <fullName>Intake_Title__c</fullName>
    <formula>SUBSTITUTE(
  IF(ISBLANK(Client__c), &quot;&quot;, 
    IF(AND(NOT(ISBLANK(Client__r.FirstName)), NOT(ISBLANK(Client__r.LastName))), Client__r.FirstName &amp; &quot; &quot; &amp; Client__r.LastName,
    IF(NOT(ISBLANK(Client__r.LastName)), Client__r.LastName, &quot;&quot;)) &amp; &quot; | &quot;
  ) &amp;
  IF(ISBLANK(Incident_Date__c), &quot;&quot;, TEXT(Incident_Date__c) &amp; &quot; | &quot;) &amp;
  IF(ISBLANK(TEXT(Incident_Type__c)), &quot;&quot;, TEXT(Incident_Type__c) &amp; &quot; | &quot;) &amp; &quot;##&quot;,
  &quot; | ##&quot;, 
  &quot;&quot;
)</formula>
    <label>Intake Title</label>
    <type>Text</type>
</CustomField>