force-app/main/default/objects/Intake__c/fields/Is_At_Risk__c.field-meta.xml
<CustomField>
    <fullName>Is_At_Risk__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is At Risk</label>
    <type>Checkbox</type>
</CustomField>