force-app/main/default/objects/Intake__c/fields/Last_Called_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Called_At__c</fullName>
    <label>Last Called At</label>
    <type>DateTime</type>
</CustomField>