force-app/main/default/objects/Intake__c/fields/Last_Communication_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Communication_At__c</fullName>
    <label>Last Communication At</label>
    <type>DateTime</type>
</CustomField>