force-app/main/default/objects/Intake__c/fields/Last_Emailed_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Emailed_At__c</fullName>
    <label>Last Emailed At</label>
    <type>DateTime</type>
</CustomField>