force-app/main/default/objects/Intake__c/fields/Last_Referral_Sent__c.field-meta.xml
<CustomField>
    <fullName>Last_Referral_Sent__c</fullName>
    <label>Last Referral Sent</label>
    <type>DateTime</type>
</CustomField>