force-app/main/default/objects/Intake__c/fields/Last_Treatment_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Treatment_Date__c</fullName>
    <label>Last Treatment Date</label>
    <type>Date</type>
</CustomField>