force-app/main/default/objects/Intake__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Intakes</relationshipLabel>
    <relationshipName>Intakes</relationshipName>
    <type>Lookup</type>
</CustomField>