force-app/main/default/objects/Intake__c/fields/Lead_Source_Channel__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Channel__c</fullName>
    <description>Acquisition channel for the intake. Used as firm context (not a dollar figure) when narrating leaks.</description>
    <label>Lead Source Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Google</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>TV</fullName>
            </value>
            <value>
                <fullName>Billboard</fullName>
            </value>
            <value>
                <fullName>Social</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>