force-app/main/default/objects/Intake__c/fields/Lead_Triage_Status__c.field-meta.xml
<CustomField>
    <fullName>Lead_Triage_Status__c</fullName>
    <label>Lead Triage Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending AI Review</fullName>
            </value>
            <value>
                <fullName>Real</fullName>
            </value>
            <value>
                <fullName>Spam</fullName>
            </value>
            <value>
                <fullName>Junk</fullName>
            </value>
            <value>
                <fullName>Needs Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>