force-app/main/default/objects/Intake__c/fields/Liability_Clarity__c.field-meta.xml
<CustomField>
    <fullName>Liability_Clarity__c</fullName>
    <label>Liability Clarity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Other_Party_Fault</fullName>
                <label>Other Party Fault</label>
            </value>
            <value>
                <fullName>Shared_Fault</fullName>
                <label>Shared Fault</label>
            </value>
            <value>
                <fullName>Unclear</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
                <isActive>false</isActive>
                <label>Unknown</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>