force-app/main/default/objects/Intake__c/fields/Liability_Notes__c.field-meta.xml
<CustomField>
    <fullName>Liability_Notes__c</fullName>
    <label>Liability Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>