force-app/main/default/objects/Intake__c/fields/License_Plate_Opposing__c.field-meta.xml
<CustomField>
    <fullName>License_Plate_Opposing__c</fullName>
    <label>License Plate (Opposing)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>