force-app/main/default/objects/Intake__c/fields/Medical_Records_Available__c.field-meta.xml
<CustomField>
    <fullName>Medical_Records_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Medical Records Available</label>
    <type>Checkbox</type>
</CustomField>