force-app/main/default/objects/Intake__c/fields/Medical_Treatment_Status__c.field-meta.xml
<CustomField>
    <fullName>Medical_Treatment_Status__c</fullName>
    <label>Medical Treatment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Discharged</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>