force-app/main/default/objects/Intake__c/fields/Meets_Minimum_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Meets_Minimum_Criteria__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Meets Minimum Criteria</label>
    <type>Checkbox</type>
</CustomField>