force-app/main/default/objects/Intake__c/fields/Missing_Active_Email__c.field-meta.xml
<CustomField>
    <fullName>Missing_Active_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Missing Active Email</label>
    <type>Checkbox</type>
</CustomField>