force-app/main/default/objects/Intake__c/fields/New_Entered_At__c.field-meta.xml
<CustomField>
    <fullName>New_Entered_At__c</fullName>
    <label>New Entered At</label>
    <type>DateTime</type>
</CustomField>