force-app/main/default/objects/Intake__c/fields/New_Manager__c.field-meta.xml
<CustomField>
    <fullName>New_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Intakes1</relationshipName>
    <type>Lookup</type>
</CustomField>