force-app/main/default/objects/Intake__c/fields/Objection_Raised__c.field-meta.xml
<CustomField>
    <fullName>Objection_Raised__c</fullName>
    <label>Objection Raised</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>