force-app/main/default/objects/Intake__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Intakes</relationshipLabel>
    <relationshipName>Intakes</relationshipName>
    <type>Lookup</type>
</CustomField>