force-app/main/default/objects/Intake__c/fields/Opposing_Adjuster_Name__c.field-meta.xml
<CustomField>
    <fullName>Opposing_Adjuster_Name__c</fullName>
    <label>Opposing Adjuster Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>