force-app/main/default/objects/Intake__c/fields/Opposing_Adjuster_Phone__c.field-meta.xml
<CustomField>
    <fullName>Opposing_Adjuster_Phone__c</fullName>
    <label>Opposing Adjuster Phone</label>
    <type>Phone</type>
</CustomField>