force-app/main/default/objects/Intake__c/fields/Opposing_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Opposing_Carrier__c</fullName>
    <label>Opposing Carrier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>