force-app/main/default/objects/Intake__c/fields/Opposing_Claim_Number__c.field-meta.xml
<CustomField>
    <fullName>Opposing_Claim_Number__c</fullName>
    <label>Opposing Claim Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>