force-app/main/default/objects/Intake__c/fields/Opposing_Driver_License__c.field-meta.xml
<CustomField>
    <fullName>Opposing_Driver_License__c</fullName>
    <label>Opposing Driver License</label>
    <length>255</length>
    <type>Text</type>
</CustomField>