force-app/main/default/objects/Intake__c/fields/Opposing_Driver_Name__c.field-meta.xml
<CustomField>
    <fullName>Opposing_Driver_Name__c</fullName>
    <label>Opposing Driver Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>