force-app/main/default/objects/Intake__c/fields/Opposing_Liability_Limits__c.field-meta.xml
<CustomField>
    <fullName>Opposing_Liability_Limits__c</fullName>
    <label>Opposing Liability Limits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>