force-app/main/default/objects/Intake__c/fields/Opposing_Vehicle_Make__c.field-meta.xml
<CustomField>
    <fullName>Opposing_Vehicle_Make__c</fullName>
    <label>Opposing Vehicle Make</label>
    <length>255</length>
    <type>Text</type>
</CustomField>