force-app/main/default/objects/Intake__c/fields/Opposing_Vehicle_Model__c.field-meta.xml
<CustomField>
    <fullName>Opposing_Vehicle_Model__c</fullName>
    <label>Opposing Vehicle Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>