force-app/main/default/objects/Intake__c/fields/Other_Vehicles_Involved__c.field-meta.xml
<CustomField>
    <fullName>Other_Vehicles_Involved__c</fullName>
    <label>Other Vehicles Involved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>