force-app/main/default/objects/Intake__c/fields/Photos_Taken_at_Scene__c.field-meta.xml
<CustomField>
    <fullName>Photos_Taken_at_Scene__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Photos Taken at Scene</label>
    <type>Checkbox</type>
</CustomField>