force-app/main/default/objects/Intake__c/fields/Police_Called__c.field-meta.xml
<CustomField>
    <fullName>Police_Called__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Police Called</label>
    <type>Checkbox</type>
</CustomField>