force-app/main/default/objects/Intake__c/fields/Police_Report_Filed__c.field-meta.xml
<CustomField>
    <fullName>Police_Report_Filed__c</fullName>
    <label>Police Report Filed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>