force-app/main/default/objects/Intake__c/fields/Police_Report_Number__c.field-meta.xml
<CustomField>
    <fullName>Police_Report_Number__c</fullName>
    <label>Police Report Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>