force-app/main/default/objects/Intake__c/fields/Pre_Existing_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Pre_Existing_Conditions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pre-Existing Conditions</label>
    <type>Checkbox</type>
</CustomField>