force-app/main/default/objects/Intake__c/fields/Pre_Existing_Description__c.field-meta.xml
<CustomField>
    <fullName>Pre_Existing_Description__c</fullName>
    <label>Pre-Existing Description</label>
    <type>TextArea</type>
</CustomField>