force-app/main/default/objects/Intake__c/fields/Primary_Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Provider_Name__c</fullName>
    <label>Primary Provider Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>