force-app/main/default/objects/Intake__c/fields/Primary_Provider_Phone__c.field-meta.xml
<CustomField>
    <fullName>Primary_Provider_Phone__c</fullName>
    <label>Primary Provider Phone</label>
    <type>Phone</type>
</CustomField>