force-app/main/default/objects/Intake__c/fields/Priority_Rank__c.field-meta.xml
<CustomField>
    <fullName>Priority_Rank__c</fullName>
    <label>Priority Rank</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>