force-app/main/default/objects/Intake__c/fields/Qualification_Score__c.field-meta.xml
<CustomField>
    <fullName>Qualification_Score__c</fullName>
    <label>Qualification Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>