force-app/main/default/objects/Intake__c/fields/Qualified__c.field-meta.xml
<CustomField>
    <fullName>Qualified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Qualified</label>
    <type>Checkbox</type>
</CustomField>