force-app/main/default/objects/Intake__c/fields/Qualified_Entered_At__c.field-meta.xml
<CustomField>
    <fullName>Qualified_Entered_At__c</fullName>
    <label>Qualified Entered At</label>
    <type>DateTime</type>
</CustomField>