force-app/main/default/objects/Intake__c/fields/Questionnaire__c.field-meta.xml
<CustomField>
    <fullName>Questionnaire__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Questionnaire</label>
    <referenceTo>Questionnaire__c</referenceTo>
    <relationshipLabel>Intakes</relationshipLabel>
    <relationshipName>Intakes</relationshipName>
    <type>Lookup</type>
</CustomField>