force-app/main/default/objects/Intake__c/fields/Questionnaire_Last_Modified__c.field-meta.xml
<CustomField>
    <fullName>Questionnaire_Last_Modified__c</fullName>
    <label>Questionnaire Last Modified</label>
    <type>DateTime</type>
</CustomField>