force-app/main/default/objects/Intake__c/fields/Questionnaire_Output__c.field-meta.xml
<CustomField>
    <fullName>Questionnaire_Output__c</fullName>
    <label>Questionnaire Output</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>