force-app/main/default/objects/Intake__c/fields/Questionnaire_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Questionnaire_Recipient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Questionnaire Recipient</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Intakes (Questionnaire Recipient)</relationshipLabel>
    <relationshipName>Intakes3</relationshipName>
    <type>Lookup</type>
</CustomField>