force-app/main/default/objects/Intake__c/fields/Questionnaire_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Questionnaire_Start_Date__c</fullName>
    <label>Questionnaire Start Date</label>
    <type>Date</type>
</CustomField>