force-app/main/default/objects/Intake__c/fields/Recommended_Action__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Action__c</fullName>
    <label>Recommended Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Send Retainer</fullName>
            </value>
            <value>
                <fullName>Attorney Review</fullName>
            </value>
            <value>
                <fullName>Refer Out</fullName>
            </value>
            <value>
                <fullName>Reject</fullName>
            </value>
            <value>
                <fullName>Needs More Info</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>