force-app/main/default/objects/Intake__c/fields/Referral__c.field-meta.xml
<CustomField>
    <fullName>Referral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referral</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Intakes (Referral)</relationshipLabel>
    <relationshipName>Intakes2</relationshipName>
    <type>Lookup</type>
</CustomField>