force-app/main/default/objects/Intake__c/fields/Referred_Out_Entered_At__c.field-meta.xml
<CustomField>
    <fullName>Referred_Out_Entered_At__c</fullName>
    <label>Referred Out Entered At</label>
    <type>DateTime</type>
</CustomField>