force-app/main/default/objects/Intake__c/fields/Reporting_Agency__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Agency__c</fullName>
    <label>Reporting Agency</label>
    <length>50</length>
    <type>Text</type>
</CustomField>