force-app/main/default/objects/Intake__c/fields/Response_Time_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Response_Time_Minutes__c</fullName>
    <formula>(First_Response_DateTime__c - CreatedDate) * 1440</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Response Time Minutes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>