force-app/main/default/objects/Intake__c/fields/Retainer_Agreement_Sent_Entered_At__c.field-meta.xml
<CustomField>
    <fullName>Retainer_Agreement_Sent_Entered_At__c</fullName>
    <label>Retainer Agreement Sent Entered At</label>
    <type>DateTime</type>
</CustomField>