force-app/main/default/objects/Intake__c/fields/Retainer_Sent_At__c.field-meta.xml
<CustomField>
    <fullName>Retainer_Sent_At__c</fullName>
    <description>Timestamp the retainer agreement was sent. The leak clock for the Unsigned Retainer detector. Stamp this in IntakeLifecycleService when Status changes to &quot;Retainer Agreement Sent&quot;.</description>
    <label>Retainer Sent At</label>
    <type>DateTime</type>
</CustomField>