force-app/main/default/objects/Intake__c/fields/Risk_Reason__c.field-meta.xml
<CustomField>
    <fullName>Risk_Reason__c</fullName>
    <label>Risk Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>