force-app/main/default/objects/Intake__c/fields/Road_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Road_Conditions__c</fullName>
    <label>Road Conditions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dry</fullName>
            </value>
            <value>
                <fullName>Wet</fullName>
            </value>
            <value>
                <fullName>Icy</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Pothole</fullName>
            </value>
            <value>
                <fullName>Poor Visibility</fullName>
            </value>
            <value>
                <fullName>Poor Lighting</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>