force-app/main/default/objects/Intake__c/fields/Serious_Injury__c.field-meta.xml
<CustomField>
    <fullName>Serious_Injury__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Serious Injury</label>
    <type>Checkbox</type>
</CustomField>