force-app/main/default/objects/Intake__c/fields/Sign_Up_Method__c.field-meta.xml
<CustomField>
    <fullName>Sign_Up_Method__c</fullName>
    <label>Sign Up Method</label>
    <length>20</length>
    <type>Text</type>
</CustomField>