force-app/main/default/objects/Intake__c/fields/SOL_Expired__c.field-meta.xml
<CustomField>
    <fullName>SOL_Expired__c</fullName>
    <formula>Statute_of_Limitations__c &lt; TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SOL Expired</label>
    <type>Checkbox</type>
</CustomField>