force-app/main/default/objects/Intake__c/fields/SOL_Warning_Flag__c.field-meta.xml
<CustomField>
    <fullName>SOL_Warning_Flag__c</fullName>
    <formula>Statute_of_Limitations__c - TODAY() &lt; 90</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SOL Warning Flag</label>
    <type>Checkbox</type>
</CustomField>