force-app/main/default/objects/Intake__c/fields/Statute_of_Limitations__c.field-meta.xml
<CustomField>
    <fullName>Statute_of_Limitations__c</fullName>
    <label>Statute of Limitations</label>
    <type>Date</type>
</CustomField>