force-app/main/default/objects/Intake__c/fields/Submitter_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Submitter_Last_Name__c</fullName>
    <label>Submitter Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>