force-app/main/default/objects/Intake__c/fields/Summary_Fact_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Summary_Fact_Sheet__c</fullName>
    <label>Summary Fact Sheet</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>