force-app/main/default/objects/Intake__c/fields/Summary_Generated_At__c.field-meta.xml
<CustomField>
    <fullName>Summary_Generated_At__c</fullName>
    <label>Summary Generated At</label>
    <type>DateTime</type>
</CustomField>