force-app/main/default/objects/Intake__c/fields/Summary_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Summary_Reviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Summary Reviewed</label>
    <type>Checkbox</type>
</CustomField>