force-app/main/default/objects/Intake__c/fields/Time_in_Converted__c.field-meta.xml
<CustomField>
    <fullName>Time_in_Converted__c</fullName>
    <formula>IF(
  NOT(ISBLANK(Converted_Entered_At__c)),
  NOW() - Converted_Entered_At__c,
  NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time in Converted (Days)</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>