force-app/main/default/objects/Intake__c/fields/Time_in_New__c.field-meta.xml
<CustomField>
    <fullName>Time_in_New__c</fullName>
    <formula>IF(
  NOT(ISBLANK(New_Entered_At__c)),
  IF(NOT(ISBLANK(Assigned_Entered_At__c)), Assigned_Entered_At__c - New_Entered_At__c,
  IF(NOT(ISBLANK(Working_Entered_At__c)), Working_Entered_At__c - New_Entered_At__c,
  IF(NOT(ISBLANK(Under_Review_Entered_At__c)), Under_Review_Entered_At__c - New_Entered_At__c,
  IF(NOT(ISBLANK(Qualified_Entered_At__c)), Qualified_Entered_At__c - New_Entered_At__c,
  IF(NOT(ISBLANK(Retainer_Agreement_Sent_Entered_At__c)), Retainer_Agreement_Sent_Entered_At__c - New_Entered_At__c,
  IF(NOT(ISBLANK(Retainer_Agreement_Signed_Entered_At__c)), Retainer_Agreement_Signed_Entered_At__c - New_Entered_At__c,
  IF(NOT(ISBLANK(Turned_Down_Entered_At__c)), Turned_Down_Entered_At__c - New_Entered_At__c,
  IF(NOT(ISBLANK(Referred_Out_Entered_At__c)), Referred_Out_Entered_At__c - New_Entered_At__c,
  IF(NOT(ISBLANK(Converted_Entered_At__c)), Converted_Entered_At__c - New_Entered_At__c,
  IF(ISPICKVAL(Status__c, &quot;New&quot;), NOW() - New_Entered_At__c,
  NULL
  )))))))))),
  NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time in New (Days)</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>